//  Copyright (c) 2021, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 LLC. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/Resource.proto";
import "wso2/discovery/api/security_scheme.proto";
import "wso2/discovery/api/Certificate.proto";
// import "wso2/discovery/api/graphql.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.apk.enforcer.discovery.api";
option java_outer_classname = "ApiProto";
option java_multiple_files = true;

// [#protodoc-title: Api]

// API config model
message Api {
	string id = 1;
	string title = 2;
	string version = 3;
	string apiType = 4;
	// string description = 5;
	string envType = 6;
	repeated Resource resources = 8;
	string basePath = 9;
	string tier = 10;
	string apiLifeCycleState = 11;
	repeated SecurityScheme securityScheme = 12;
	repeated SecurityList security = 13;
	string authorizationHeader = 14;
	bool disableSecurity = 15;
	string vhost = 16;
	string organizationId = 17;
	// bool isMockedApi = 18;
	repeated Certificate clientCertificates = 19;
	string mutualSSL = 20;
	bool applicationSecurity = 21;
	/// string graphQLSchema = 22;
	// repeated GraphqlComplexity graphqlComplexityInfo = 23;
	bool systemAPI = 24;
}
